--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,4 +1,30 @@
-# Main entrypoint of the workflow. 
-# Please follow the best practices: 
-# https://snakemake.readthedocs.io/en/stable/snakefiles/best_practices.html,
-# in particular regarding the standardized folder structure mentioned there. 
+import glob
+import pandas as pd
+from snakemake.utils import validate
+from snakemake.utils import min_version
+
+##### set minimum snakemake version #####
+min_version("6.4.1")
+
+
+##### setup report #####
+configfile: "config/config.yaml"
+
+
+# report: "report/workflow.rst" ## Why this?
+
+
+##### load rules #####
+
+
+include: "rules/common.smk"
+include: "rules/window.smk"
+include: "rules/analyze.smk"
+
+##### target rules #####
+
+rule all:
+    input:
+#        "results/scaffold1_12.raxml.bestTree"
+#        get_R_outs(),
+        "results/metrics.tsv"
